# SKU_Genius

BACKEND/SRC/: .gitignore
BACKEND/SRC/apps/genius/: tsconfig.json
BACKEND/SRC/configs/tsconfig-custom/: tsconfig.react.json  tsconfig.vue.json
BACKEND/SRC/docs/: README.md
BACKEND/SRC/docs/meetup/: README.md
BACKEND/SRC/docs/report/: README.md
Backend/: .yarnrc.yml  README.md  package.json
Backend/.github/workflows/: ci.yml
Backend/SRC/: CONTRIBUTING.md
Backend/SRC/configs/eslint-conifg-yaml/: index.js
Backend/SRC/configs/tsconfig-custom/: package.json
Backend/SRC/servers/genius/: manage.py  pyproject.toml
Backend/SRC/servers/genius/genius/: urls.py  wsgi.py
Backend/SRC/servers/genius/geniusback/: admin.py  apps.py  utils.py  views.py
Backend/SRC/templates/vue-project/: tsconfig.node.json
Backend/apps/genius/: package.json  vite.config.ts
Backend/apps/genius/src/: atoms.ts
Backend/configs/eslint-config-custom/: index.js
Backend/configs/eslint-config-react/: index.js  package.json
Backend/configs/eslint-config-vue/: index.js  package.json
Backend/configs/eslint-conifg-yaml/: package.json
Backend/configs/prettier-config-custom/: package.json
Backend/configs/tsconfig-custom/: tsconfig.json
Backend/configs/vite-config-custom/: index.d.ts  index.js  package.json
Backend/servers/genius/: Dockerfile  README.md  podman-compose.yml
Backend/servers/genius/genius/: asgi.py  settings.py
Backend/servers/genius/geniusback/: serializers.py  urls.py
Backend/templates/vue-project/: README.md  tsconfig.json  vite.config.ts
Baekend/servers/genius/: Dockerfile  manage.py  podman-compose.yml  pyproject.toml
Baekend/servers/genius/djangoProject/: models.py
Baekend/servers/genius/genius/: asgi.py  settings.py  urls.py  wsgi.py
Baekend/servers/genius/geniusback/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
Baekend/servers/genius/geniusback/migrations/: 0001_initial.py  0002_titleimage.py  0003_titleimage_img_genre.py  0004_bookShortStory_and_books_draft.py
Frontend/: commit  package.json
Frontend/apps/genius/: index.html  package.json  vite.config.ts
Frontend/configs/tsconfig-custom/: tsconfig.vue.json
(+235 files in other folders)
